add new images and layout improvments

--- a/Android/UDOOMobileTanker/app/src/main/res/values/strings.xml
+++ b/Android/UDOOMobileTanker/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">UDOO Mobile Tanker</string>
+    <string name="Chose_a_color">Pick a color on the camera stream</string>
 </resources>
